fixes layout issues sub 1200px

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -20,6 +20,17 @@
   color: @brand-primary;
 }
 
+// responsive fix using ico-nav
+@media (min-width: @screen-sm) {
+  .container {
+    padding-left: @iconav-width;
+  }
+
+  .container-navbar-top {
+    padding-top: @iconav-width;
+  }
+}
+
 @import './form';
 @import './loading';
 @import './markdown';
